--- a/source-css/futemotes.css
+++ b/source-css/futemotes.css
@@ -348,3 +348,12 @@ a[href|="/futalick"] {
     height: 250px;
     width: 246px;
 }
+
+a[href|="/twiley"] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image:url(%%twiley%%);
+    height: 5000px;
+    width: 5000px;
+}
