--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -14,6 +14,7 @@ a[href|="/swordserious"] {
     float: left;
     width: 100px;
     height: 134px;
+    background-repeat: no-repeat;
     background-image: url(%%swordserious%%)
     }
 
@@ -23,6 +24,7 @@ a[href|="/swordshrug"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordshrug%%)
     }
 
@@ -32,6 +34,7 @@ a[href|="/swordstare"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordstare%%)
     }
 
@@ -41,6 +44,7 @@ a[href|="/swordlie"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordlie%%)
     }
 
@@ -50,6 +54,7 @@ a[href|="/swordouch"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordouch%%)
     }
 
@@ -59,6 +64,7 @@ a[href|="/swordberg"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordberg%%)
     }
 
@@ -68,6 +74,7 @@ a[href|="/swordhoof"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordhoof%%)
     }
 
@@ -77,6 +84,7 @@ a[href|="/swordcrazy"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordcrazy%%)
     }
 
@@ -86,6 +94,7 @@ a[href|="/swordmad"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordmad%%)
     }
 
@@ -95,6 +104,7 @@ a[href|="/swordsad"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordsad%%)
     }
 
@@ -104,6 +114,7 @@ a[href|="/swordshock"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordshock%%)
     }
 
@@ -113,6 +124,7 @@ a[href|="/swordsmile"] {
     float: left;
     width: 70px;
     height: 70px;
+    background-repeat: no-repeat;
     background-image: url(%%swordsmile%%)
     }
 
@@ -122,6 +134,7 @@ a[href|="/agentp"] {
     float: left;
     width: 70px;
     height: 97px;
+    background-repeat: no-repeat;
     background-image: url(%%agentp%%)
     }
 
@@ -131,6 +144,7 @@ a[href|="/perry"] {
     float: left;
     width: 150px;
     height: 68px;
+    background-repeat: no-repeat;
     background-image: url(%%perry%%)
     }
 
@@ -140,6 +154,7 @@ a[href|="/doofenshmirtz"] {
     float: left;
     width: 40px;
     height: 90px;
+    background-repeat: no-repeat;
     background-image: url(%%doofenshmirtz%%)
     }
 
@@ -149,5 +164,6 @@ a[href|="/thedoof"] {
     float: left;
     width: 160px;
     height: 200px;
+    background-repeat: no-repeat;
     background-image: url(%%thedoof%%)
     }
