--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -167,7 +167,7 @@ a[href$="/spoiler"]:hover {
 #link-desc.infobar:after {
     font-weight: bold;
     display: block;
-    content: "NOTE 1: Come on in to the IRC after posting and get your piece critiqued live. NOTE 2: Check the ''new'' queue after submitting your post. If your submission doesn't show up, notify the moderators by messaging them.";
+    content: "NOTE 1: Come on in to the #reddit-mlpds IRC after posting and get your piece critiqued live.  NOTE 2: Check the ''new'' queue after submitting your post. If your submission doesn't show up, notify the moderators by messaging them.";
     background-color: #F0F0F0
     }
 
