--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -396,6 +396,8 @@ background-repeat: no-repeat;
 .flair-CustomOriginal:after { background-position: 0px -4080px }
 .flair-tsyuan:after { background-position: 0px -4110px }
 .flair-Unsinkablesam:after { background-position: 0px -4140px }
+.flair-Coggly:after { background-position: 0px -4170px }
+.flair-Meatloaf:after { background-position: 0px -4200px }
 
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: transparent!important; }
