--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -281,7 +281,7 @@ a[href|="/nerdychriscandyvan"] {
     }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"], a[href|="/discursed"], a[href|="/apprentice"], a[href|="/zecorapour"], a[href|="/worldtrekka"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"], a[href|="/discursed"], a[href|="/apprentice"], a[href|="/zecorapour"], a[href|="/worldtrekka"], a[href|="/theclopping"] {
     display: block;
     clear: none;
     float: left;
@@ -394,7 +394,11 @@ a[href|="/zecorapour"] {
     }
 a[href|="/worldtrekka"] {
     background-position: -2890px -0px;
-    width: 144px
+    width: 119px
+    }
+a[href|="/theclopping"] {
+    background-position: -3009px -0px;
+    width: 126px
     }
 
 /***********MLP-XLRG*************/
