--- a/source-css/mylittlealcoholic.css
+++ b/source-css/mylittlealcoholic.css
@@ -43,7 +43,7 @@
 
 /* BACKGROUND */
 body {
-    background: url(%%party%%) top right fixed no-repeat;
+    background: url(%%bg-kamina%%) top right fixed no-repeat;
 }
 
 /*Self-Post Image, No Image, Spoiler Image*/
