--- a/source-css/sapphirestone.css
+++ b/source-css/sapphirestone.css
@@ -17,7 +17,7 @@ div.titlebox .users-online span.number:after
 .sidecontentbox a.author[href$="/lukjad007"]:before {
     content: "lukjad" !important;
     font-size: 10pt !important;
-    color: #369 !important;
+    color: rgb(25, 56, 7) !important;
     display:block !important;
     margin-right: 0.5em !important;
     }
@@ -29,10 +29,115 @@ div.titlebox .users-online span.number:after
     display:block !important;
     }
 
+/* kaitou42's changes below */
+
+.tabmenu li a { 
+background-color: rgb(150, 223, 121);
+color: rgb(25, 56, 7);
+}
+
+#header {
+border-bottom: 1px solid #667044;
+}
+
+.tabmenu li.selected a {
+color: rgb(150, 223, 121);
+background-color: rgb(25, 56, 7);
+border: 1px solid #667044;
+border-bottom: 1px solid #dfe9c0;
+}
+
+.tabmenu li {
+ background-color: #dfe9c0; 
+}
+
+.thing .title:visited {
+color: #787878;
+}
+
+.thing .title.click {
+color: #787878;
+}
+
+.thing .title.loggedin:visited {
+color: #787878;
+}
+
+.thing .title.loggedin.click:visited {
+color: #787878;
+}
+.thing .title.loggedin.click {
+color: #787878;
+}
+
+
+.thing .title {
+color: rgb(25, 56, 7);
+}
+
+
+.thing .title.loggedin {
+color: rgb(25, 56, 7);
+}
+
+
+
+a { 
+color: rgb(25, 56, 7);
+}
+
+.tagline a {
+color: rgb(25, 56, 7);
+}
+
+.morelink a {
+color: rgb(25, 56, 7);
+}
+
+.side {
+background-color: #f9f7d5;
+}
+
+.link .expando .usertext .md {
+border: 0px solid #dfe9c0!important;
+background-color: #c4d19a!important;
+}
+
+.roundfield {
+background-color: #c4d19a;
+}
+
+.info-notice {
+background-color: #c4d19a!important;
+border: 1px solid #dfe9c0!important;
+}
+
+.tabmenu.formtab .selected a {
+color: rgb(150, 223, 121);
+background-color: rgb(25, 56, 7);
+}
+
+
+.formtabs-content {
+border-top: 4px solid rgb(25, 56, 7);
+}
+
+.linefield {
+background-color: #c4d19a;
+
+}
+
+.infobar {
+background-color: #d4c36b;
+border: 1px solid #ba9e46;
+}
+
+/* kaitou42's changes above */
+
 .sidecontentbox a.author[href$="/Daring-Do"]:before {
     content: "Daring Do will find it for you." !important;
     font-size: 10pt !important;
-    color: #369 !important;
+    color: rgb(25, 56, 7)!important;
     display:block !important;
     margin-right: 0.5em !important;
     }
@@ -48,7 +153,7 @@ div.titlebox .users-online span.number:after
 
 .link .expando .usertext .md {
 border: 0px solid #dfe9c0 !important;
-background-color: #a3b46d !important;
+/* background-color: #a3b46d !important; */
     }
 
 /*Background Test*/
