--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -167,3 +167,23 @@ a[href|="/thedoof"] {
     background-repeat: no-repeat;
     background-image: url(%%thedoof%%)
     }
+
+a[href|="/sadmonogram"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 90px;
+    height: 85px;
+    background-repeat: no-repeat;
+    background-image: url(%%sadmonogram%%)
+    }
+
+a[href|="/monogram"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 90px;
+    height: 106px;
+    background-repeat: no-repeat;
+    background-image: url(%%monogram%%)
+    }
