--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -1157,7 +1157,7 @@ a[href|="/jfish"]
 
 /*Sheet 2*/
 
-a[href|="/awestruck"], a[href|="/cranky"], a[href|="/bloomdance"], a[href|="/rdheadbang"], a[href|="/flutterwat"], a[href|="/justfahn"], a[href|="/cooltavia"], a[href|="/rdheh"], a[href|="/sadjack"], a[href|="/itsbeautiful"], a[href|="/iwantit"], a[href|="/scratchpride"], a[href|="/spitfireum"], a[href|="/twielaine"], a[href|="/twigrin"]
+a[href|="/awestruck"], a[href|="/cranky"], a[href|="/bloomdance"], a[href|="/rdheadbang"], a[href|="/flutterwat"], a[href|="/justfahn"], a[href|="/cooltavia"], a[href|="/rdheh"], a[href|="/sadjack"], a[href|="/itsbeautiful"], a[href|="/iwantit"], a[href|="/scratchpride"], a[href|="/spitfireum"], a[href|="/twielaine"], a[href|="/twigrin"], a[href|="/fancyapprove"], a[href|="/approvypants"]
 {
     background-image: url(%%Emotes2%%) !important;
     clear: none;
@@ -1238,6 +1238,10 @@ a[href|="/twielaine"]
 a[href|="/twigrin"]
 {
     background-position: -182px -364px;
+}
+a[href|="/fancyapprove"], a[href|="/approvypants"]
+{
+    background-position: -0px -455px;
 }
 
 /*Sheet 3*/
