--- a/source-css/mylittlenosleep.css
+++ b/source-css/mylittlenosleep.css
@@ -583,6 +583,9 @@ a[href|="/rns26"] {
     height: 75px;
     background-position: -419px -464px
     }
+
+
+START-PONYSCRIPT-IGNORE {color: red }
 a[href="/sp"] {
     display: inline-block;
     padding-right: 100%
@@ -889,3 +892,13 @@ background-position: -150px -400px;
 a[href="/nsb39"] {
 background-position: -150px -450px;
 }
+a[href="/17eudq"] {
+display: block;
+clear: none;
+float: left;
+width: 132px;
+height: 150px;
+background-image: url(%%jukebox%%)
+}
+
+END-PONYSCRIPT-IGNORE{color:red}
