--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1108,11 +1108,11 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 */
 
 /* STOP SUBMITTING BORDERLANDS */
-/*
+
 #title-field.roundfield:before
 {
- content:"Please refrain from posting screenshots of adult Silver Spoon from the Gameloft MLP game. It has been posted many times and it will be removed. Thank you.";
- font-size:0.86em;
+ content:"Please refrain from putting spoilers in your titles!";
+ font-size:1.0em;
  padding:5px;
  border:1px solid #5f99cf;
  background-color:#EFF7FF;
@@ -1121,7 +1121,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
  display:block;
  margin-bottom: 10px;
 }
-*/
+
 
 /*NSFW.MOV*/
 /*
