--- a/source-css/mylittletwist.css
+++ b/source-css/mylittletwist.css
@@ -820,6 +820,17 @@ a[href|="/twiststare"]
 
 }
 
+a[href|="/squid"]
+{
+
+ background-image: url(%%squid%%) !important;
+    clear: none;
+    display: block;
+    float: left;
+    height: 135px;
+    width: 240px;
+
+}
 
 
 
