--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -144,13 +144,13 @@ a[href|="/manlytoast"] {
     background-position: -0px -0px
     }
 
-a[href|="/notbobbobbington"] {
+a[href|="/bobbobbington"] {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%bobbobbington%%)
     }
-a[href|="/notbobbobbington"] {
+a[href|="/bobbobbington"] {
     width: 70px;
     height: 73px;
     background-position: -0px -0px
