--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -281,6 +281,27 @@ a[href|="/snowshy"], a[href|="/wfs00"] { background-position: -0px -0px }
 a[href|="/merryshy"], a[href|="/wfs10"] { background-position: -100px -0px }
 a[href|="/scarfshy"], a[href|="/wfs20"] { background-position: -200px -0px }
 a[href|="/santashy"], a[href|="/wfs01"] { background-position: -0px -100px }
+/* Pretzels */
+
+a[href|="/omnom"], a[href|="/pheipretzel"], a[href|="/twipretzel"], a[href|="/gotpretzel"], a[href|="/pretzeltime"] {
+
+display: block;
+clear: none;
+float: left;
+height: 300px;
+background-image: url(%%pretzelsheet%%) !important
+}
+
+a[href|="/omnom"], a[href|="/pheipretzel"], a[href|="/twipretzel"] {
+background-position: -0px -0px;
+width: 210px;
+}
+
+a[href|="/gotpretzel"], a[href|="/pretzeltime"] {
+background-position: -210px -0px;
+width: 340px;
+}
+
 /* Space thingy */
 a[href|="/sp"] {
     display: inline-block;
@@ -666,3 +687,20 @@ background-position: -200px -600px;
     display: block;
     letter-spacing: normal;   
 } */
+
+/* Sidebar fix because it bothers me */
+
+.side
+{
+
+width:310px !important;
+}
+
+div.sheets
+{
+width:900px !important;
+}
+
+.stylesheet-customize-container textarea {
+    height: 500px
+    }
